Fix z-index in BlockAnimation

--- a/src/shared/interactive/blockAnimation/BlockAnimation.module.scss
+++ b/src/shared/interactive/blockAnimation/BlockAnimation.module.scss
@@ -4,7 +4,7 @@
    position: fixed;
    top: 0;
    left: 0;
-   z-index: 9999;
+   z-index: 12000;
 
    width: 100%;
    height: 100%;
